tests/test_enum/bad/quick_pattern_2.catala_en
## Article

```catala
declaration enumeration E:
  -- Case1 content integer
  -- Case2

declaration enumeration F:
  -- Case3

declaration scope A:
  context x content E
  context y content boolean
  context z content boolean

declaration scope B:
  context x content E
  context y content boolean
  context z content boolean

scope A:
  definition x equals Case1 content 2
  definition y equals x with pattern Case1
  definition z equals x with pattern Case2

scope B:
  definition x equals Case2
  definition y equals x with pattern Case3
```

```catala-test {id="A.Interpret"}
catala Interpret -s A
```
